.collect(Collectors.toList()) -> .toList()
multiple issues, e.g.
https://sonarcloud.io/project/issues?impactSeverities=MEDIUM&issueStatuses=OPEN%2CCONFIRMED&branch=v3.x.x&id=zowe_api-layer&open=AZG8RK1saDaTTh7MLItF

Signed-off-by: Richard Salac <richard.salac@broadcom.com>